# DictDumper

./: .buildinfo  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  dictdumper.dumper.html  dictdumper.html  dictdumper.json.html  dictdumper.plist.html  dictdumper.tree.html  dictdumper.vuejs.html  dictdumper.xml.html  genindex.html  index.html  make.sh  meta.yaml  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: create-release.yml  deploy-pages.yml
_modules/: index.html
_modules/dictdumper/: dumper.html  json.html  plist.html  tree.html  vuejs.html  xml.html
_sources/: dictdumper.dumper.rst.txt  dictdumper.json.rst.txt  dictdumper.plist.rst.txt  dictdumper.tree.rst.txt  dictdumper.vuejs.rst.txt
_static/: documentation_options.js
archive/docker/: Dockerfile  docker-compose.yml
conda/dictdumper/: meta.yaml
dictdumper/: __init__.py  _dateutil.py  dumper.py  json.py  plist.py  tree.py  vuejs.py  xml.py
doc/: requirements.txt
doc/source/: conf.py  dictdumper.dumper.rst  dictdumper.json.rst  dictdumper.plist.rst  dictdumper.rst  dictdumper.tree.rst  dictdumper.vuejs.rst  dictdumper.xml.rst  index.rst
docker/: Dockerfile  docker.sh
src/: __init__.py  _hexlify.py  _types.py  dumper.py  html.py  json.py  plist.py  tree.py  vuejs.py  xml.py
tests/: gen_json.py  gen_plist.py  gen_tree.py  test.py
tests/json/: test_1.py2.json  test_2.json  test_2.py2.json  test_3.json  test_3.py2.json
tests/plist/: test_1.py2.plist  test_2.plist  test_3.plist
tests/tree/: test_1.py2.txt  test_2.py2.txt  test_3.py2.txt
util/: bump_version.py  wheel_rename.py
