[build-system]
requires = [
    "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "dictdumper"
dynamic = [ "version", "readme" ]
authors = [
    { name="Jarry Shaw", email="jarryshaw@icloud.com" },
]
maintainers = [
    { name="Jarry Shaw" },
]
license = { text="BSD 3-Clause License" }
requires-python = ">=2.7"
description = "DictDumper: comprehensive network packet analysis library"
keywords = [ "formatting", "dumper", "stream" ]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Environment :: MacOS X',
    'Environment :: Win32 (MS Windows)',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Operating System :: MacOS',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Programming Language :: Python :: 2',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.0',
    'Programming Language :: Python :: 3.1',
    'Programming Language :: Python :: 3.2',
    'Programming Language :: Python :: 3.3',
    'Programming Language :: Python :: 3.4',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: Implementation',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'Topic :: System :: Networking',
    'Topic :: Utilities',
]
dependencies = [
    "typing-extensions; python_version < '3.8'",
]

[project.urls]
homepage = "https://jarryshaw.github.io/DictDumper/"
documentation = "https://jarryshaw.github.io/DictDumper/"
repository = "https://github.com/JarryShaw/DictDumper"
changelog = "https://github.com/JarryShaw/DictDumper/releases"

[project.optional-dependencies]
docs = [
    "Sphinx>=6.1.3",
    "sphinx-autodoc-typehints", "sphinx-opengraph", "sphinx-copybutton",
    "furo",
]

# setuptools specific

[tool.setuptools]
zip-safe = false  # We use __file__ in dictdumper/__init__.py, therefore Scapy isn't zip safe

[tool.setuptools.packages.find]
include = [
    "dictdumper*",
]
exclude = [
    "test*",
    "docs*",
    "sample*",
]

[tool.setuptools.dynamic]
version = { attr="dictdumper.__version__" }
